# hr-fde-inbound

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml  test_api.py
app/: config.py  main.py
app/db/: city_data.py  connection.py  schema.py  seed.py  seed_history.py
app/db/repositories/: booked_load_repo.py  call_repo.py  carrier_repo.py  dashboard_repo.py  load_repo.py  negotiation_settings_repo.py  offer_repo.py
app/models/: __init__.py  call.py  carrier.py  dashboard.py  enums.py  load.py  location.py  negotiation_settings.py  offer.py
app/routes/: _auth.py  booked_loads.py  calls.py  carrier_interactions.py  carriers.py  dashboard.py  health.py  loads.py  negotiation_settings.py  offers.py
app/services/: booked_load_service.py  call_service.py  carrier_interaction_service.py  carrier_service.py  dashboard_service.py  load_service.py  offer_service.py
app/utils/: fmcsa.py  geo.py  period.py
data/: loads.json
scripts/: reset_db.sh  tunnel.sh
