[project]
name = "happy-robot"
version = "0.1.0"
description = "Acme Logistics — Carrier Inbound Sales API"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "rapidfuzz>=3.6.0",
    "python-dotenv>=1.0.0",
    "cachetools>=7.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "types-cachetools>=6.2.0.20251022",
]

[tool.ruff]
target-version = "py313"
line-length = 79

[tool.ruff.format]
quote-style = "double"
